Package fontEncoding.properties to fix a long-standing bustage of MathML on the Mac, r+sr=sfraser, b=228804